--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-browser": "~8.2.4",
     "@angular/platform-browser-dynamic": "~8.2.4",
     "@angular/router": "~8.2.4",
+    "@ngx-formly/core": "^5.0.0",
+    "@ngx-formly/material": "^5.0.0",
+    "@ngx-formly/schematics": "^5.9.3",
+    "animate.css": "^4.1.0",
     "hammerjs": "^2.0.8",
+    "ngx-owl-carousel-o": "^4.0.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
